--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,7 @@ body {
     text-decoration:none;
     font-family: 'Raleway', sans-serif;
     color:#4d4d4d;
+    text-align: center;
 }
 
 .portfolio-box-text:hover {
